* build "ocat", "ofront", "showdef".

--- a/Linux/Bin/build
+++ b/Linux/Bin/build
@@ -1,17 +1,17 @@
 #!/bin/bash
 cd ../Obj
-../Bin/ofront ../Mod/
 
-Lib=../Ofront.a
-# @IF EXIST %Lib% DEL %Lib%
+rm ../Sym/*.sym
 
-../Bin/compile %Lib% SYSTEM0
-../Bin/compile %Lib% Args
-../Bin/compile %Lib% Console
-../Bin/compile %Lib% Unix -noinit
-../Bin/compile %Lib% Kernel
-../Bin/compile %Lib% Files
-../Bin/compile %Lib% Reals -noinit
-../Bin/compile %Lib% Modules -noinit
-../Bin/compile %Lib% CmdlnTexts
-# ../Bin/clear
+../Bin/compile OfrontOPM.cmdln
+../Bin/compile OfrontOPS
+../Bin/compile OfrontOPT
+../Bin/compile OfrontOPB
+../Bin/compile OfrontOPP
+../Bin/compile OfrontOPC
+../Bin/compile OfrontOPV
+../Bin/compile OCatCmd -o ../ocat
+../Bin/compile OfrontCmd OfrontOPM.o OfrontOPS.o OfrontOPT.o OfrontOPB.o OfrontOPP.o OfrontOPC.o OfrontOPV.o -o../ofront
+../Bin/compile BrowserCmd OfrontOPM.o OfrontOPS.o OfrontOPT.o OfrontOPC.o OfrontOPV.o -o../showdef
+
+#../Bin/clear
