--- a/Linux/Bin/build
+++ b/Linux/Bin/build
@@ -3,6 +3,7 @@ cd ../Obj
 
 rm ../Sym/*.sym
 
+../Bin/compile OfrontErrors
 ../Bin/compile OfrontOPM.cmdln
 ../Bin/compile OfrontOPS
 ../Bin/compile OfrontOPT
@@ -11,7 +12,7 @@ rm ../Sym/*.sym
 ../Bin/compile OfrontOPC
 ../Bin/compile OfrontOPV
 ../Bin/compile OCatCmd -o ../ocat
-../Bin/compile OfrontCmd OfrontOPM.o OfrontOPS.o OfrontOPT.o OfrontOPB.o OfrontOPP.o OfrontOPC.o OfrontOPV.o -o../ofront+
-../Bin/compile BrowserCmd OfrontOPM.o OfrontOPS.o OfrontOPT.o OfrontOPC.o OfrontOPV.o -o../showdef
+../Bin/compile OfrontCmd OfrontErrors.o OfrontOPM.o OfrontOPS.o OfrontOPT.o OfrontOPB.o OfrontOPP.o OfrontOPC.o OfrontOPV.o -o../ofront+
+../Bin/compile BrowserCmd OfrontErrors.o OfrontOPM.o OfrontOPS.o OfrontOPT.o OfrontOPC.o OfrontOPV.o -o../showdef
 
 #../Bin/clear
