--- a/Linux/Lib/Bin/build
+++ b/Linux/Lib/Bin/build
@@ -7,6 +7,7 @@ rm ../Sym/*.sym
 
 ## Ofront+
 ../Bin/compile $Lib SYSTEM
+../Bin/compile $Lib Platform.Unix
 ../Bin/compile $Lib Args
 ../Bin/compile $Lib Console
 ../Bin/compile $Lib Unix
