--- a/Linux/Lib/Bin/build
+++ b/Linux/Lib/Bin/build
@@ -8,17 +8,20 @@ rm ../Sym/*.sym
 ## Ofront+
 ../Bin/compile $Lib SYSTEM
 ../Bin/compile $Lib Platform.Unix
+../Bin/compile $Lib Heap
 ../Bin/compile $Lib Args
 ../Bin/compile $Lib Console
-../Bin/compile $Lib Unix
-../Bin/compile $Lib Kernel.Unix
-../Bin/compile $Lib Files.Unix
+../Bin/compile $Lib Strings
+../Bin/compile $Lib Files
 ../Bin/compile $Lib Reals
 ../Bin/compile $Lib Modules.Unix
 ../Bin/compile $Lib CmdlnTexts
 
 ## OOC2
+../Bin/compile $Lib ooc2Ascii
+../Bin/compile $Lib ooc2ConvTypes
 ../Bin/compile $Lib ooc2RandomNumbers
+../Bin/compile $Lib ooc2Strings
 
 #../Bin/clear
 
