--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ Lib/Test64/*.c
 Lib/Test64/*.exe
 Linux/Lib/Obj/*.o
 Linux/Lib/Obj64/*.o
+Linux/Lib/Test/*.c
+Linux/Lib/Test64/*.c
 Linux/Obj/*.o
 Linux/Obj64/*.o
 Linux/ocat
