--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 Arch/
 Code/
-Lib/Obj/*.c
-Lib/Obj/*.o
-Lib/Obj/*.sym
-Lib/Obj64/*.c
-Lib/Obj64/*.o
-Lib/Obj64/*.sym
+Lib/Obj/
+Lib/Obj64/
 Lib/Test/*.c
 Lib/Test/*.exe
 Lib/Test64/*.c
@@ -31,12 +27,8 @@ Linux/Samples64/*
 Linux/ocat
 Linux/ofront+
 Linux/showdef
-Obj/*.c
-Obj/*.o
-Obj/*.sym
-Obj64/*.c
-Obj64/*.o
-Obj64/*.sym
+Obj/
+Obj64/
 Samples/*.c
 Samples/*.exe
 Samples64/*.c
