--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,19 @@
 Arch/
 Code/
+Bin/ocat.exe
+Bin/showdef.exe
 Lib/Obj/
 Lib/Obj64/
 Lib/Sym/
 Lib/Sym64/
+Lib/*.a
 Lib/Test/*.c
 Lib/Test/*.exe
 Lib/Test64/*.c
 Lib/Test64/*.exe
+Linux/Bin/ocat
+Linux/Bin/showdef
+Linux/Bin64/
 Linux/Lib/Obj/*.c
 Linux/Lib/Obj/*.o
 Linux/Lib/Obj64/*.c
