--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ Linux/Lib/Obj64/*.c
 Linux/Lib/Obj64/*.o
 Linux/Lib/Test/*.c
 Linux/Lib/Test64/*.c
+Linux/Lib/*.a
 Linux/Obj/*.c
 Linux/Obj/*.o
 Linux/Obj64/*.c
