--- a/Linux_arm/Bin/build
+++ b/Linux_arm/Bin/build
@@ -1,5 +1,5 @@
 #!/bin/bash
-if [ ! -f "../Lib/libOfront.a" ]; then cd "../Lib"; ./build; cd ../Bin"; fi
+if [ ! -f "../Lib/libOfront.a" ]; then cd "../Lib"; ./build; cd "../Bin"; fi
 ./o2c
 ./cc
 rm ../Obj/*.o
