--- a/.gitignore
+++ b/.gitignore
@@ -14,31 +14,12 @@ Lib/Test64/*.exe
 Linux_arm/ocat
 Linux_arm/showdef
 Linux_arm/Lib/*.a
-Linux/Bin/ocat
-Linux/Bin/showdef
-Linux/Bin64/
-Linux/Lib/Obj/*.c
-Linux/Lib/Obj/*.o
-Linux/Lib/Obj64/*.c
-Linux/Lib/Obj64/*.o
-Linux/Lib/Test/*.c
-Linux/Lib/Test64/*.c
-Linux/Lib/*.a
-Linux/Obj/*.c
-Linux/Obj/*.o
-Linux/Obj64/*.c
-Linux/Obj64/*.o
-Linux/Samples/*
-!Linux/Samples/*.sh
-!Linux/Samples/*.par
-!Linux/Samples/*.png
-Linux/Samples64/*
-!Linux/Samples64/*.sh
-!Linux/Samples64/*.par
-!Linux/Samples64/*.png
-Linux/ocat
-Linux/ofront+
-Linux/showdef
+Linux_x86/ocat
+Linux_x86/showdef
+Linux_x86/Lib/*.a
+Linux_x64/ocat
+Linux_x64/showdef
+Linux_x64/Lib/*.a
 Obj/
 Obj64/
 Samples/*.c
