* Lib/Mod/SYSTEM.h: * types for WinMain (-D_WINMAIN).

--- a/.gitignore
+++ b/.gitignore
@@ -20,16 +20,23 @@ Linux_x86/Lib/*.a
 Linux_x64/ocat
 Linux_x64/showdef
 Linux_x64/Lib/*.a
-Obj/
-Obj64/
-Samples/*.c
-Samples/*.exe
-Samples64/*.c
-Samples64/*.exe
+Obj/*.c
+Obj/*.h
+Obj64/*.c
+Obj64/*.h
+Examples/Obj/*.a
+Examples/Obj/*.c
+Examples/Obj/*.h
+Examples/Obj/*.sym
+Examples/Obj64/*.a
+Examples/Obj64/*.c
+Examples/Obj64/*.h
+Examples/Obj64/*.sym
+Examples/x64/*.exe
+Examples/x64/MyDLL.dll
+Examples/*.exe
+Examples/MyDLL.dll
 Sym/
 Sym64/
 ToDo/
-Work/*.c
-Work/*.exe
-*.sbm
 +Git.bat
