--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,19 @@ Lib/Test/*.c
 Lib/Test/*.exe
 Lib/Test64/*.c
 Lib/Test64/*.exe
+Linux_arm/Examples/Obj/*.c
+Linux_arm/Examples/Obj/*.h
+Linux_arm/Examples/Obj/*.sym
+Linux_arm/Examples/*.so
+Linux_arm/Examples/BlitBmp*
+Linux_arm/Examples/Book
+Linux_arm/Examples/Cnezinka
+Linux_arm/Examples/Elo4ka
+Linux_arm/Examples/Gradient24
+Linux_arm/Examples/HelloWorld
+Linux_arm/Examples/Mandelbrot*
+Linux_arm/Examples/MyDLLuse
+Linux_arm/Examples/TestHttp
 Linux_arm/ocat
 Linux_arm/showdef
 Linux_arm/Lib/*.a
@@ -30,6 +43,19 @@ Linux_x86/Examples/TestHttp
 Linux_x86/ocat
 Linux_x86/showdef
 Linux_x86/Lib/*.a
+Linux_x64/Examples/Obj/*.c
+Linux_x64/Examples/Obj/*.h
+Linux_x64/Examples/Obj/*.sym
+Linux_x64/Examples/*.so
+Linux_x64/Examples/BlitBmp*
+Linux_x64/Examples/Book
+Linux_x64/Examples/Cnezinka
+Linux_x64/Examples/Elo4ka
+Linux_x64/Examples/Gradient24
+Linux_x64/Examples/HelloWorld
+Linux_x64/Examples/Mandelbrot*
+Linux_x64/Examples/MyDLLuse
+Linux_x64/Examples/TestHttp
 Linux_x64/ocat
 Linux_x64/showdef
 Linux_x64/Lib/*.a
