--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,19 @@ Lib/Test64/*.exe
 Linux_arm/ocat
 Linux_arm/showdef
 Linux_arm/Lib/*.a
+Linux_x86/Examples/Obj/*.c
+Linux_x86/Examples/Obj/*.h
+Linux_x86/Examples/Obj/*.sym
+Linux_x86/Examples/*.so
+Linux_x86/Examples/BlitBmp*
+Linux_x86/Examples/Book
+Linux_x86/Examples/Cnezinka
+Linux_x86/Examples/Elo4ka
+Linux_x86/Examples/Gradient24
+Linux_x86/Examples/HelloWorld
+Linux_x86/Examples/Mandelbrot*
+Linux_x86/Examples/MyDLLuse
+Linux_x86/Examples/TestHttp
 Linux_x86/ocat
 Linux_x86/showdef
 Linux_x86/Lib/*.a
