--- a/Linux_x86/Examples/Bin/build
+++ b/Linux_x86/Examples/Bin/build
@@ -1,6 +1,6 @@
 #!/bin/bash
-# -------------------- YOU NEED --------------------
-# libsdl2-dev libsdl2-image-dev libcurl4-openssl-dev
+# -------------------- YOU NEED -----------------------------------
+# libsdl2-dev libsdl2-image-dev libcurl4-openssl-dev libc6-dev-i386
 
 cd ../Obj
 export PATH="../..:$PATH"
@@ -12,7 +12,7 @@ ofront+ -mC -44 BlitBmp.Mod BlitBmp2.Mod Book.Mod Cnezinka.Mod Elo4ka.Mod Gradie
 if [ $? != 0 ]; then exit 1; fi
 
 export LIB="-I../../Lib/Obj -I../../../Lib/Mod -L../../Lib -lOfront"
-export CC="gcc -m32 -Os -g0 -fvisibility=hidden -fomit-frame-pointer -finline-small-functions -fno-exceptions -fno-unwind-tables -fno-asynchronous-unwind-tables -Wl,--gc-sections"
+export CC="gcc -m32 -no-pie -Os -g0 -fvisibility=hidden -fomit-frame-pointer -finline-small-functions -fno-exceptions -fno-unwind-tables -fno-asynchronous-unwind-tables -Wl,--gc-sections"
 
 $CC HelloWorld.c -s -o../HelloWorld $LIB
 if [ $? != 0 ]; then exit 1; fi
