--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,55 @@
 Arch/
-Mod/Lib/Bin/
-Mod/Lib/Obj/
-Mod/Lib/Obj64/
-Mod/Lib/Sym/
-Mod/Lib/Sym64/
-Target/BlackBox/Code/
-Target/BlackBox/Sym/
-Target/Linux_arm/Examples/Obj/*.c
-Target/Linux_arm/Examples/Obj/*.h
-Target/Linux_arm/Examples/Obj/*.sym
-Target/Linux_arm/Examples/*.so
-Target/Linux_arm/Examples/BlitBmp*
-Target/Linux_arm/Examples/Book
-Target/Linux_arm/Examples/Cnezinka
-Target/Linux_arm/Examples/Elo4ka
-Target/Linux_arm/Examples/Gradient24
-Target/Linux_arm/Examples/HelloWorld
-Target/Linux_arm/Examples/Mandelbrot*
-Target/Linux_arm/Examples/MyDLLuse
-Target/Linux_arm/Examples/TestHttp
-Target/Linux_arm/graphviz
-Target/Linux_arm/ocat
-Target/Linux_arm/showdef
-Target/Linux_arm/Lib/*.a
-Target/Linux_x86/Examples/Obj/*.c
-Target/Linux_x86/Examples/Obj/*.h
-Target/Linux_x86/Examples/Obj/*.sym
-Target/Linux_x86/Examples/*.so
-Target/Linux_x86/Examples/BlitBmp*
-Target/Linux_x86/Examples/Book
-Target/Linux_x86/Examples/Cnezinka
-Target/Linux_x86/Examples/Elo4ka
-Target/Linux_x86/Examples/Gradient24
-Target/Linux_x86/Examples/HelloWorld
-Target/Linux_x86/Examples/Mandelbrot*
-Target/Linux_x86/Examples/MyDLLuse
-Target/Linux_x86/Examples/TestHttp
-Target/Linux_x86/graphviz
-Target/Linux_x86/ocat
-Target/Linux_x86/showdef
-Target/Linux_x86/Lib/*.a
-Target/Linux_x64/Examples/Obj/*.c
-Target/Linux_x64/Examples/Obj/*.h
-Target/Linux_x64/Examples/Obj/*.sym
-Target/Linux_x64/Examples/*.so
-Target/Linux_x64/Examples/BlitBmp*
-Target/Linux_x64/Examples/Book
-Target/Linux_x64/Examples/Cnezinka
-Target/Linux_x64/Examples/Elo4ka
-Target/Linux_x64/Examples/Gradient24
-Target/Linux_x64/Examples/HelloWorld
-Target/Linux_x64/Examples/Mandelbrot*
-Target/Linux_x64/Examples/MyDLLuse
-Target/Linux_x64/Examples/TestHttp
-Target/Linux_x64/graphviz
-Target/Linux_x64/ocat
-Target/Linux_x64/showdef
-Target/Linux_x64/Lib/*.a
+Target/Linux64/Examples/Obj/*.c
+Target/Linux64/Examples/Obj/*.h
+Target/Linux64/Examples/Obj/*.sym
+Target/Linux64/Examples/*.so
+Target/Linux64/Examples/BlitBmp*
+Target/Linux64/Examples/Book
+Target/Linux64/Examples/Cnezinka
+Target/Linux64/Examples/Elo4ka
+Target/Linux64/Examples/Gradient24
+Target/Linux64/Examples/HelloWorld
+Target/Linux64/Examples/Mandelbrot*
+Target/Linux64/Examples/MyDLLuse
+Target/Linux64/Examples/TestHttp
+Target/Linux64/graphviz
+Target/Linux64/ocat
+Target/Linux64/showdef
+Target/Linux64/Lib/*.a
+Target/Linux86/Examples/Obj/*.c
+Target/Linux86/Examples/Obj/*.h
+Target/Linux86/Examples/Obj/*.sym
+Target/Linux86/Examples/*.so
+Target/Linux86/Examples/BlitBmp*
+Target/Linux86/Examples/Book
+Target/Linux86/Examples/Cnezinka
+Target/Linux86/Examples/Elo4ka
+Target/Linux86/Examples/Gradient24
+Target/Linux86/Examples/HelloWorld
+Target/Linux86/Examples/Mandelbrot*
+Target/Linux86/Examples/MyDLLuse
+Target/Linux86/Examples/TestHttp
+Target/Linux86/graphviz
+Target/Linux86/ocat
+Target/Linux86/showdef
+Target/Linux86/Lib/*.a
+Target/LinuxArm/Examples/Obj/*.c
+Target/LinuxArm/Examples/Obj/*.h
+Target/LinuxArm/Examples/Obj/*.sym
+Target/LinuxArm/Examples/*.so
+Target/LinuxArm/Examples/BlitBmp*
+Target/LinuxArm/Examples/Book
+Target/LinuxArm/Examples/Cnezinka
+Target/LinuxArm/Examples/Elo4ka
+Target/LinuxArm/Examples/Gradient24
+Target/LinuxArm/Examples/HelloWorld
+Target/LinuxArm/Examples/Mandelbrot*
+Target/LinuxArm/Examples/MyDLLuse
+Target/LinuxArm/Examples/TestHttp
+Target/LinuxArm/graphviz
+Target/LinuxArm/ocat
+Target/LinuxArm/showdef
+Target/LinuxArm/Lib/*.a
 Target/Win32/Examples/Obj/*.a
 Target/Win32/Examples/Obj/*.c
 Target/Win32/Examples/Obj/*.h
