--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,55 @@
 Arch/
-Target/Linux64/Examples/Obj/*.c
-Target/Linux64/Examples/Obj/*.h
-Target/Linux64/Examples/Obj/*.sym
-Target/Linux64/Examples/*.so
-Target/Linux64/Examples/BlitBmp*
-Target/Linux64/Examples/Book
-Target/Linux64/Examples/Cnezinka
-Target/Linux64/Examples/Elo4ka
-Target/Linux64/Examples/Gradient24
-Target/Linux64/Examples/HelloWorld
-Target/Linux64/Examples/Mandelbrot*
-Target/Linux64/Examples/MyDLLuse
-Target/Linux64/Examples/TestHttp
-Target/Linux64/graphviz
-Target/Linux64/ocat
-Target/Linux64/showdef
-Target/Linux64/Lib/*.a
-Target/Linux86/Examples/Obj/*.c
-Target/Linux86/Examples/Obj/*.h
-Target/Linux86/Examples/Obj/*.sym
-Target/Linux86/Examples/*.so
-Target/Linux86/Examples/BlitBmp*
-Target/Linux86/Examples/Book
-Target/Linux86/Examples/Cnezinka
-Target/Linux86/Examples/Elo4ka
-Target/Linux86/Examples/Gradient24
-Target/Linux86/Examples/HelloWorld
-Target/Linux86/Examples/Mandelbrot*
-Target/Linux86/Examples/MyDLLuse
-Target/Linux86/Examples/TestHttp
-Target/Linux86/graphviz
-Target/Linux86/ocat
-Target/Linux86/showdef
-Target/Linux86/Lib/*.a
-Target/LinuxArm/Examples/Obj/*.c
-Target/LinuxArm/Examples/Obj/*.h
-Target/LinuxArm/Examples/Obj/*.sym
-Target/LinuxArm/Examples/*.so
-Target/LinuxArm/Examples/BlitBmp*
-Target/LinuxArm/Examples/Book
-Target/LinuxArm/Examples/Cnezinka
-Target/LinuxArm/Examples/Elo4ka
-Target/LinuxArm/Examples/Gradient24
-Target/LinuxArm/Examples/HelloWorld
-Target/LinuxArm/Examples/Mandelbrot*
-Target/LinuxArm/Examples/MyDLLuse
-Target/LinuxArm/Examples/TestHttp
-Target/LinuxArm/graphviz
-Target/LinuxArm/ocat
-Target/LinuxArm/showdef
-Target/LinuxArm/Lib/*.a
+Target/Linux_amd64/Examples/Obj/*.c
+Target/Linux_amd64/Examples/Obj/*.h
+Target/Linux_amd64/Examples/Obj/*.sym
+Target/Linux_amd64/Examples/*.so
+Target/Linux_amd64/Examples/BlitBmp*
+Target/Linux_amd64/Examples/Book
+Target/Linux_amd64/Examples/Cnezinka
+Target/Linux_amd64/Examples/Elo4ka
+Target/Linux_amd64/Examples/Gradient24
+Target/Linux_amd64/Examples/HelloWorld
+Target/Linux_amd64/Examples/Mandelbrot*
+Target/Linux_amd64/Examples/MyDLLuse
+Target/Linux_amd64/Examples/TestHttp
+Target/Linux_amd64/graphviz
+Target/Linux_amd64/ocat
+Target/Linux_amd64/showdef
+Target/Linux_amd64/Lib/*.a
+Target/Linux_armv7/Examples/Obj/*.c
+Target/Linux_armv7/Examples/Obj/*.h
+Target/Linux_armv7/Examples/Obj/*.sym
+Target/Linux_armv7/Examples/*.so
+Target/Linux_armv7/Examples/BlitBmp*
+Target/Linux_armv7/Examples/Book
+Target/Linux_armv7/Examples/Cnezinka
+Target/Linux_armv7/Examples/Elo4ka
+Target/Linux_armv7/Examples/Gradient24
+Target/Linux_armv7/Examples/HelloWorld
+Target/Linux_armv7/Examples/Mandelbrot*
+Target/Linux_armv7/Examples/MyDLLuse
+Target/Linux_armv7/Examples/TestHttp
+Target/Linux_armv7/graphviz
+Target/Linux_armv7/ocat
+Target/Linux_armv7/showdef
+Target/Linux_armv7/Lib/*.a
+Target/Linux_i386/Examples/Obj/*.c
+Target/Linux_i386/Examples/Obj/*.h
+Target/Linux_i386/Examples/Obj/*.sym
+Target/Linux_i386/Examples/*.so
+Target/Linux_i386/Examples/BlitBmp*
+Target/Linux_i386/Examples/Book
+Target/Linux_i386/Examples/Cnezinka
+Target/Linux_i386/Examples/Elo4ka
+Target/Linux_i386/Examples/Gradient24
+Target/Linux_i386/Examples/HelloWorld
+Target/Linux_i386/Examples/Mandelbrot*
+Target/Linux_i386/Examples/MyDLLuse
+Target/Linux_i386/Examples/TestHttp
+Target/Linux_i386/graphviz
+Target/Linux_i386/ocat
+Target/Linux_i386/showdef
+Target/Linux_i386/Lib/*.a
 Target/Win32/Examples/Obj/*.a
 Target/Win32/Examples/Obj/*.c
 Target/Win32/Examples/Obj/*.h
