--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,25 @@ Target/Linux_i386/ocat
 Target/Linux_i386/odc2txt
 Target/Linux_i386/showdef
 Target/Linux_i386/Lib/*.a
+
+Target/macOS/Examples/Obj/*.c
+Target/macOS/Examples/Obj/*.h
+Target/macOS/Examples/Obj/*.sym
+Target/macOS/Examples/*.so
+Target/macOS/Examples/BlitBmp*
+Target/macOS/Examples/Book
+Target/macOS/Examples/Cnezinka
+Target/macOS/Examples/Elo4ka
+Target/macOS/Examples/Gradient24
+Target/macOS/Examples/HelloWorld
+Target/macOS/Examples/Mandelbrot*
+Target/macOS/Examples/MyDLLuse
+Target/macOS/Examples/TestHttp
+Target/macOS/graphviz
+Target/macOS/odc2txt
+Target/macOS/ocat
+Target/macOS/showdef
+Target/macOS/Lib/*.a
 Target/Win32/Examples/Obj/*.a
 Target/Win32/Examples/Obj/*.c
 Target/Win32/Examples/Obj/*.h
