--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,9 @@ Target/Linux_amd64/Examples/Mandelbrot*
 Target/Linux_amd64/Examples/MyDLLuse
 Target/Linux_amd64/Examples/TestHttp
 Target/Linux_amd64/graphviz
-Target/Linux_amd64/odc2txt
 Target/Linux_amd64/ocat
+Target/Linux_amd64/odc2txt
+Target/Linux_amd64/oef
 Target/Linux_amd64/showdef
 Target/Linux_amd64/Lib/*.a
 Target/Linux_armv7/Examples/Obj/*.c
@@ -33,6 +34,7 @@ Target/Linux_armv7/Examples/TestHttp
 Target/Linux_armv7/graphviz
 Target/Linux_armv7/ocat
 Target/Linux_armv7/odc2txt
+Target/Linux_armv7/oef
 Target/Linux_armv7/showdef
 Target/Linux_armv7/Lib/*.a
 Target/Linux_i386/Examples/Obj/*.c
@@ -51,6 +53,7 @@ Target/Linux_i386/Examples/TestHttp
 Target/Linux_i386/graphviz
 Target/Linux_i386/ocat
 Target/Linux_i386/odc2txt
+Target/Linux_i386/oef
 Target/Linux_i386/showdef
 Target/Linux_i386/Lib/*.a
 
@@ -68,8 +71,9 @@ Target/macOS/Examples/Mandelbrot*
 Target/macOS/Examples/MyDLLuse
 Target/macOS/Examples/TestHttp
 Target/macOS/graphviz
-Target/macOS/odc2txt
 Target/macOS/ocat
+Target/macOS/odc2txt
+Target/macOS/oef
 Target/macOS/showdef
 Target/macOS/Lib/*.a
 Target/Win32/Examples/Obj/*.a
