* Linux_amd64 & Linux_i386: rebuild.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 Arch/
 Target/Linux_amd64/Examples/Obj/*.c
-Target/Linux_amd64/Examples/Obj/*.Oh
+Target/Linux_amd64/Examples/Obj/*.oh
 Target/Linux_amd64/Examples/Obj/*.sym
 Target/Linux_amd64/Examples/*.so
 Target/Linux_amd64/Examples/BlitBmp*
@@ -19,7 +19,7 @@ Target/Linux_amd64/oef
 Target/Linux_amd64/showdef
 Target/Linux_amd64/Lib/*.a
 Target/Linux_armv7/Examples/Obj/*.c
-Target/Linux_armv7/Examples/Obj/*.Oh
+Target/Linux_armv7/Examples/Obj/*.oh
 Target/Linux_armv7/Examples/Obj/*.sym
 Target/Linux_armv7/Examples/*.so
 Target/Linux_armv7/Examples/BlitBmp*
@@ -38,7 +38,7 @@ Target/Linux_armv7/oef
 Target/Linux_armv7/showdef
 Target/Linux_armv7/Lib/*.a
 Target/Linux_i386/Examples/Obj/*.c
-Target/Linux_i386/Examples/Obj/*.Oh
+Target/Linux_i386/Examples/Obj/*.oh
 Target/Linux_i386/Examples/Obj/*.sym
 Target/Linux_i386/Examples/*.so
 Target/Linux_i386/Examples/BlitBmp*
@@ -58,7 +58,7 @@ Target/Linux_i386/showdef
 Target/Linux_i386/Lib/*.a
 
 Target/macOS/Examples/Obj/*.c
-Target/macOS/Examples/Obj/*.Oh
+Target/macOS/Examples/Obj/*.oh
 Target/macOS/Examples/Obj/*.sym
 Target/macOS/Examples/*.so
 Target/macOS/Examples/BlitBmp*
@@ -78,7 +78,7 @@ Target/macOS/showdef
 Target/macOS/Lib/*.a
 Target/Win32/Examples/Obj/*.a
 Target/Win32/Examples/Obj/*.c
-Target/Win32/Examples/Obj/*.Oh
+Target/Win32/Examples/Obj/*.oh
 Target/Win32/Examples/Obj/*.sym
 Target/Win32/Examples/*.exe
 Target/Win32/Examples/*.dll
@@ -89,7 +89,7 @@ Target/Win32/Sym/
 Target/Win32/*.exe
 Target/Win64/Examples/Obj/*.a
 Target/Win64/Examples/Obj/*.c
-Target/Win64/Examples/Obj/*.Oh
+Target/Win64/Examples/Obj/*.oh
 Target/Win64/Examples/Obj/*.sym
 Target/Win64/Examples/*.exe
 Target/Win64/Examples/*.dll
