--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ Target/Linux_amd64/graphviz
 Target/Linux_amd64/ocat
 Target/Linux_amd64/odc2txt
 Target/Linux_amd64/oef
+Target/Linux_amd64/omake
 Target/Linux_amd64/showdef
 Target/Linux_amd64/Lib/*.a
 Target/Linux_armv7/Examples/Obj/*.c
@@ -35,6 +36,7 @@ Target/Linux_armv7/graphviz
 Target/Linux_armv7/ocat
 Target/Linux_armv7/odc2txt
 Target/Linux_armv7/oef
+Target/Linux_armv7/omake
 Target/Linux_armv7/showdef
 Target/Linux_armv7/Lib/*.a
 Target/Linux_i386/Examples/Obj/*.c
@@ -54,6 +56,7 @@ Target/Linux_i386/graphviz
 Target/Linux_i386/ocat
 Target/Linux_i386/odc2txt
 Target/Linux_i386/oef
+Target/Linux_i386/omake
 Target/Linux_i386/showdef
 Target/Linux_i386/Lib/*.a
 
@@ -74,6 +77,7 @@ Target/macOS/graphviz
 Target/macOS/ocat
 Target/macOS/odc2txt
 Target/macOS/oef
+Target/macOS/omake
 Target/macOS/showdef
 Target/macOS/Lib/*.a
 Target/Win32/Examples/Obj/*.a
