--- a/.travis.yml
+++ b/.travis.yml
@@ -13,16 +13,19 @@ script:
   - mkdir unix-88
   - cd unix-88
   - cp ../Mod/Lib/SYSTEM.* .
+  - cp ../Mod/Lib/*.h0 .
   - ../Target/Win32/Bin/o2c-bootstrap.bat -88
   - cd ..
   - mkdir unix-48
   - cd unix-48
   - cp ../Mod/Lib/SYSTEM.* .
+  - cp ../Mod/Lib/*.h0 .
   - ../Target/Win32/Bin/o2c-bootstrap.bat -48
   - cd ..
   - mkdir unix-44
   - cd unix-44
   - cp ../Mod/Lib/SYSTEM.* .
+  - cp ../Mod/Lib/*.h0 .
   - ../Target/Win32/Bin/o2c-bootstrap.bat -44
   - cd ..
   - rm -Rf .git
