--- a/.travis.yml
+++ b/.travis.yml
@@ -14,19 +14,31 @@ script:
   - cd unix-88
   - cp ../Mod/Lib/SYSTEM.* .
   - cp ../Mod/Lib/*.h0 .
-  - ../Target/Win32/Bin/o2c-bootstrap.bat -88
+  - ../Target/Win32/Bin/o2c-bootstrap.bat -88 Unix
   - cd ..
   - mkdir unix-48
   - cd unix-48
   - cp ../Mod/Lib/SYSTEM.* .
   - cp ../Mod/Lib/*.h0 .
-  - ../Target/Win32/Bin/o2c-bootstrap.bat -48
+  - ../Target/Win32/Bin/o2c-bootstrap.bat -48 Unix
   - cd ..
   - mkdir unix-44
   - cd unix-44
   - cp ../Mod/Lib/SYSTEM.* .
   - cp ../Mod/Lib/*.h0 .
-  - ../Target/Win32/Bin/o2c-bootstrap.bat -44
+  - ../Target/Win32/Bin/o2c-bootstrap.bat -44 Unix
+  - cd ..
+  - mkdir windows-48
+  - cd windows-48
+  - cp ../Mod/Lib/SYSTEM.* .
+  - cp ../Mod/Lib/*.h0 .
+  - ../Target/Win32/Bin/o2c-bootstrap.bat -48 Windows
+  - cd ..
+  - mkdir windows-88
+  - cd windows-88
+  - cp ../Mod/Lib/SYSTEM.* .
+  - cp ../Mod/Lib/*.h0 .
+  - ../Target/Win32/Bin/o2c-bootstrap.bat -88 Windows
   - cd ..
   - rm -Rf .git
   - mv -f Target/Linux_amd64/Bin/.travis.yml .
@@ -39,6 +51,7 @@ after_success: |
     git add unix-88
     git add unix-48
     git add unix-44
+    git add windows*
     git add .travis.yml
     git add cc-bootstrap
     git -c user.name='zorko' -c user.email='zorko@vedasoft' commit -m "o2c #$TRAVIS_BUILD_NUMBER"
