--- a/.travis.yml
+++ b/.travis.yml
@@ -12,42 +12,38 @@ branches:
     - master
 
 script:
-  - cd Target/Win64/Lib/Bin
+  - cd Target/Win64/Bin
   - ./build.bat
-  - cd ../../Bin
-  - ./o2c.bat
-  - ./cc.bat
-  - cd ../..
+  - cd ../../..
   - mkdir unix-88
   - cd unix-88
   - cp ../Mod/Lib/SYSTEM.* .
   - cp ../Mod/Lib/*.h0 .
-  - ../Target/Win32/Bin/o2c-bootstrap.bat -88 Unix
+  - ../Target/Win64/Bin/o2c-bootstrap.bat -88 Unix
   - cd ..
   - mkdir unix-48
   - cd unix-48
   - cp ../Mod/Lib/SYSTEM.* .
   - cp ../Mod/Lib/*.h0 .
-  - ../Target/Win32/Bin/o2c-bootstrap.bat -48 Unix
+  - ../Target/Win64/Bin/o2c-bootstrap.bat -48 Unix
   - cd ..
   - mkdir unix-44
   - cd unix-44
   - cp ../Mod/Lib/SYSTEM.* .
   - cp ../Mod/Lib/*.h0 .
-  - ../Target/Win32/Bin/o2c-bootstrap.bat -44 Unix
-  - cd ..
-  - rm -Rf .git
-  - mv -f Target/Linux_amd64/Bin/.travis.yml .
-  - mv Target/Linux_amd64/Bin/cc-bootstrap .
+  - ../Target/Win64/Bin/o2c-bootstrap.bat -44 Unix
 
 after_success: |
   if [ -n "$GITHUB_API_KEY" ]; then
     cd "$TRAVIS_BUILD_DIR"
+    rm -Rf .git
+    mv -f Target/Linux_amd64/Bin/.travis.yml .
+    mv Target/Linux_amd64/Bin/cc-bootstrap .
     git init
+    git add -f Target/Win64/*.exe
     git add unix-88
     git add unix-48
     git add unix-44
-    git add Target/Win64/*.exe
     git add .travis.yml
     git add cc-bootstrap
     git -c user.name='zorko' -c user.email='zorko@vedasoft' commit -m "o2c #$TRAVIS_BUILD_NUMBER"
