--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   job1:
-    runs-on: windows-latest
+    runs-on: windows-2019
     steps:
       - uses: actions/checkout@v1
 
@@ -53,3 +53,4 @@ jobs:
         shell: bash
         env:
           BOOTSTRAP_TOKEN: ${{secrets.BOOTSTRAP_TOKEN}}
+#
